samples/_failures_safe/1761540251_81d5fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c64eaf9.c: In function ‘main’:
./samples/SAFE/__tmp_6c64eaf9.c:163:9: error: ‘cols’ undeclared (first use in this function); did you mean ‘cols2’?
  163 |     if (cols
      |         ^~~~
      |         cols2
./samples/SAFE/__tmp_6c64eaf9.c:163:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6c64eaf9.c:163:13: error: expected ‘)’ at end of input
  163 |     if (cols
      |        ~    ^
      |             )
./samples/SAFE/__tmp_6c64eaf9.c:163:5: error: expected declaration or statement at end of input
  163 |     if (cols
      |     ^~
